--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      <div class="app">
+      <!-- <div class="app">
         <h1>Raccoon Quiz</h1>
         <div class="quiz">
           <h2 id="question">Our Question</h2>
@@ -43,7 +43,7 @@
             <button class="btn">Answer 4</button>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
     <!--
       This HTML file is a template.
